[ fusion ] Java 17, Spring Boot 2.7.18, Spring Cloud 2021.0.8